--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+<style>
+  #home {
+   /* background-image: url('images/uploads/logos/home-bg.png');*/
+    background-size:cover;
+    background-repeat: no-repeat;
+  }
+</style>    
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
@@ -51,8 +59,8 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#home" class="page-scroll">Home</a></li>
-        <li><a href="/worship" class="page-scroll">God's Word For You</a></li>
-        <li><a href="/worship" class="page-scroll">Kids for Christ</a></li>
+        <li><a href="/worship" class="page-scroll">Worship</a></li>
+        <li><a href="/worship" class="page-scroll">Donate</a></li>
         <li><a href="/contact" class="page-scroll">Contact</a></li>
       </ul>
     </div>
@@ -79,7 +87,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-6 col-md-offset-1">
-        <h3>Thank you for giving to Eastminster Presbyterian Church ! Your contribution makes a difference!</h3>
+        <h3>Thank you for giving to Eastminster Presbyterian Church! Your contribution makes a difference!</h3>
         <p>Let us think about how we may offer our time, our talents, or any other good gifts we have received from the Lord to benefit and further God's will for his creation.</p>
       </div>
       <div class="col-xs-12 col-md-4 text-center"><a target="_blank" href="https://www.powr.io/checkout_screen?unique_label=ceb35473_1623442279" class="btn btn-custom btn-lg page-scroll">Give Now</a></div>
@@ -431,7 +439,7 @@
           <div class="testimonial-image"> <img src="img/uploads/ministry-team/patti.png" alt=""> </div>
           <div class="testimonial-content">
             <div class="testimonial-meta"> Patti Kuna CP </div>
-            <p>Pianist/Organist
+            <p>Administration
 
             </p>
           </div>
@@ -464,6 +472,15 @@
           </div>
         </div>
       </div>
+      <div class="col-md-4">
+        <div class="testimonial">
+          <div class="testimonial-image"> <img src="img/uploads/ministry-team/josh.jpg" alt=""> </div>
+          <div class="testimonial-content">
+            <div class="testimonial-meta"> Josh Romesburg </div>
+            <p>Audio/Video Engineer </p>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
@@ -488,6 +505,27 @@
         <p><span>Email</span> FaithInMotion@eastminsterERIE.com</p>
       </div>
     </div>
+
+    <!-- Start Social Icons -->
+    <div style="text-align:center">
+      <a title="Erie DJ Company YouTube" href="https://www.youtube.com/channel/UCWWO4zkvw4zjN3BUjgjXq2Q"  target="_blank">
+        <span style="font-size:30px;color:#FF0000;" class="fa fa-youtube-play"></span>
+      </a>
+
+      <a title="Erie DJ Company Facebook" href="https://www.facebook.com/Eastminster-Presbyterian-Church-180009598709357" target="_blank" style="margin-left:25px;margin-right:25px">
+        <span style="font-size:30px;color:#4267B2;" class="fa fa-facebook"></span>
+      </a>
+        
+      <a title="Erie DJ Company Instagram" href="https://www.instagram.com/eastminstererie/" target="_blank">
+        <span style="font-size:30px;color: transparent;
+          background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+          background: -webkit-radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+          background-clip: text;
+          -webkit-background-clip: text;" class="fa fa-instagram"></span>
+      </a>
+    </div>
+    <!-- End Social Icons -->
+
     <div class="col-md-12">
       
       <div class="row">
