--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <li><a href="/about" class="page-scroll">About Us</a></li>
         <li><a href="/connect" class="page-scroll">Connect With Us</a></li>
         <li><a href="/worship" class="page-scroll">Worship With Us</a></li>
-        <li><a href="/connect" class="page-scroll">Serve With Us</a></li>
+        <li><a href="/serve" class="page-scroll">Serve With Us</a></li>
         <li><a href="/watch-live" class="page-scroll" style="background-clip: content-box;color:white;background-color: green;">Watch Live</a></li>
       </ul>
     </div>
@@ -253,10 +253,10 @@
           <div class="list-style">
             <div class="col-lg-12 col-sm-6 col-xs-12">
               <ul>
-                <li>New to us? <a style="text-decoration:underline">Check us out and plan your visit.</a></li>
-                <li>Have questions? <a style="text-decoration:underline">We have answers!</a></li>
-                <li>Want to get involved? <a style="text-decoration:underline">See what's coming up</a></li>
-                <li>Want to get notified? <a style="text-decoration:underline">Subscribe to our weekly email</a></li>
+                <li>New to us? <a href="/connect" style="text-decoration:underline">Check us out and plan your visit.</a></li>
+                <li>Have questions? <a href="/connect#faqs" style="text-decoration:underline">We have answers!</a></li>
+                <li>Want to get involved? <a href="/serve" style="text-decoration:underline">See what's coming up</a></li>
+                <li>Want to get notified? <a href="" style="text-decoration:underline">Subscribe to our weekly email</a></li>
               </ul>
             </div>
             
@@ -361,7 +361,7 @@
     <div class="col-lg-6 section-title">
       <h2>Serve With Us</h2>
       <p style="font-size:12pt">Our mission is to share God's love with our community. Will you join us?</p>
-      <a href="#about" class="btn btn-custom btn-lg page-scroll">Learn More</a> </div>
+      <a href="/serve" class="btn btn-custom btn-lg page-scroll">Learn More</a> </div>
     </div>
   </div>
 </div>
@@ -392,7 +392,7 @@
     <div class="col-md-3 col-md-offset-1 contact-info">
       <div class="contact-item">
         <h2>Contact Us</h2>
-        <p><span>Address</span><a href="https://goo.gl/maps/xQM5ENek9GNjMncZ6">2320 East Lake Road<br />
+        <p><span>Address</span><a href="https://goo.gl/maps/xQM5ENek9GNjMncZ6" target="_blank">2320 East Lake Road<br />
           Erie, Pennsylvania 16511</a></p>
       </div>
       <div class="contact-item">
@@ -495,9 +495,8 @@
       <div class="col-xs-12 col-md-6"> <img src="img/uploads/about-us-1.jpg" class="img-responsive" alt=""> </div>
     </div>
   </div>
-</div>
-
-<div id="about">
+  <br />
+  <br />
   <div id="worship" class="container">
     <div class="row">
       <div class="col-xs-12 col-md-6"> 
@@ -851,7 +850,7 @@
   <div id="worship" class="container">
     <div class="row">
       <div class="col-xs-12 col-md-6"> 
-        <img id="about-img" src="img/uploads/in-person.jpeg" class="img-responsive" alt=""> 
+        <img id="about-img" src="img/uploads/online.jpeg" class="img-responsive" alt=""> 
       </div>
       <div class="col-xs-12 col-md-6">
         <div style="text-align: center;" class="about-text">
