--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <div style="text-align: center;" class="about-text">
           <h2>Worship With Us</h2>
             <p style="font-size: 12pt">Join us in-person as we celebrate and share in God's love together.</p>
-          <div class="list-style">
+          <div style="justify-content:center;display:flex;" class="list-style">
             <div style="font-size: 14pt;" class="col-lg-12 col-sm-6 col-xs-12">
               <script>
                 function nextDate(dayIndex) {
@@ -858,27 +858,30 @@
       <div class="col-xs-12 col-md-6">
         <div style="text-align: center;" class="about-text">
           <h2>Watch LIVE</h2>
-          <div class="list-style">
+          <div class="list-style" style="justify-content:center;display:flex;" >
             <div style="font-size: 14pt;" class="col-lg-12 col-sm-6 col-xs-12">
               Whether you can't make it on time or simply live far away, we welcome you to watch online through the link above. We look forward to seeing you... online or in person!
 
 If you happen to miss us, see the Worship With Us Page for access to previous services and videos.
               <br /><br />
               <div class="row" style="justify-content: center;text-align: center;">
-                <div style="padding-right:35px;display:inline-block;">
+                
+                <div class="container col-sm-12 col-md-12 col-lg-12">
+                  <div style="padding-right:35px;display:inline-block;">
                     <img src="img/uploads/click-here.png" style="width:125px">
-                </div>
-                <div style="padding-right:35px;display:inline-block;">
+                  </div>
+                  <div style="padding-right:35px;display:inline-block;">
                   <a title="Eastminster Presbyterian Church Zoom - Erie, PA" href="https://us02web.zoom.us/j/4987043991?pwd=c0k5ZnVHQnMxa0VRMXVoNVBxWWFrdz09" target="_blank">
                     <img src="img/uploads/zoom-live.png" style="width:125px">
                   </a>
+                  </div>
+                  <div style="display:inline-block;">
+                    <a title="Eastminster Presbyterian Church Facebook LIVE - Erie, PA" href="https://www.facebook.com/100064621632291/live" target="_blank">
+                      <img src="img/uploads/facebook-live.png" style="width:125px">
+                    </a>
+                  </div>
                 </div>
-                <div style="display:inline-block;">
-                  <a title="Eastminster Presbyterian Church Facebook LIVE - Erie, PA" href="https://www.facebook.com/100064621632291/live" target="_blank">
-                    <img src="img/uploads/facebook-live.png" style="width:125px">
-                  </a>
-                </div>
-              </div>
+              </div>  
             </div>
           </div>
         </div>
